<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/base_form"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_tab3"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/dp13"
                android:layout_marginTop="@dimen/dp48"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_setting" />

            <LinearLayout
                android:id="@+id/ll_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp77"
                android:layout_marginBottom="@dimen/dp25"
                android:gravity="center_vertical">

                <com.ysy15350.ysyutils.custom_view.RoundImageView
                    android:id="@+id/img_head"
                    android:layout_width="@dimen/dp77"
                    android:layout_height="@dimen/dp77"
                    android:layout_marginStart="@dimen/dp20"
                    android:src="@mipmap/icon_head_test"
                    custom:rtype="circle" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nickName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp10"
                        android:text="@string/default_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp22" />

                    <TextView
                        android:id="@+id/tv_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp13"
                        android:text="@string/default_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp18" />

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/dp30"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginEnd="@dimen/dp13"
                    android:src="@mipmap/icon_right_white" />
            </LinearLayout>
        </LinearLayout>

        <!--top end-->


        <!--账户信息-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp90"
            android:background="@color/white">


        </LinearLayout>


        <!--账户信息end-->

        <View
            style="@style/view_line"
            android:layout_marginTop="@dimen/dp20" />

        <LinearLayout style="@style/menu_item_grid_layout_horizon">

            <LinearLayout
                android:id="@+id/ll_menu_1"
                style="@style/menu_item_grid_layout_item">

                <ImageView
                    style="@style/menu_item_grid_icon"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/menu_item_grid_text"
                    android:text="@string/main_tab2_menu1" />

            </LinearLayout>

            <View style="@style/view_line_vertical" />

            <LinearLayout
                android:id="@+id/ll_menu_2"
                style="@style/menu_item_grid_layout_item">

                <ImageView
                    style="@style/menu_item_grid_icon"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/menu_item_grid_text"
                    android:text="@string/main_tab2_menu2" />
            </LinearLayout>

            <View style="@style/view_line_vertical" />

            <LinearLayout
                android:id="@+id/ll_menu_3"
                style="@style/menu_item_grid_layout_item">

                <ImageView
                    style="@style/menu_item_grid_icon"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/menu_item_grid_text"
                    android:text="@string/main_tab2_menu3" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/view_line" />

        <LinearLayout style="@style/menu_item_grid_layout_horizon">

            <LinearLayout
                android:id="@+id/ll_menu_4"
                style="@style/menu_item_grid_layout_item">

                <ImageView
                    style="@style/menu_item_grid_icon"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/menu_item_grid_text"
                    android:text="@string/main_tab2_menu4" />
            </LinearLayout>

            <View style="@style/view_line_vertical" />

            <LinearLayout
                android:id="@+id/ll_menu_5"
                style="@style/menu_item_grid_layout_item">

                <ImageView
                    style="@style/menu_item_grid_icon"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/menu_item_grid_text"
                    android:text="@string/main_tab2_menu5" />
            </LinearLayout>

            <View style="@style/view_line_vertical" />

            <LinearLayout
                android:id="@+id/ll_menu_6"
                style="@style/menu_item_grid_layout_item">

                <ImageView
                    style="@style/menu_item_grid_icon"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/menu_item_grid_text"
                    android:text="@string/main_tab2_menu6" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/view_line" />

        <!--menu end-->


    </LinearLayout>

</LinearLayout>